unpackaged/main/default/objects/Contact/fields/NU_ADV_AG_Constituent_Segment__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_AG_Constituent_Segment__c</fullName>
    <label>AG Constituent Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UG Most Recent</fullName>
            </value>
            <value>
                <fullName>UG Young Alum</fullName>
            </value>
            <value>
                <fullName>UG General</fullName>
            </value>
            <value>
                <fullName>Grad Alum</fullName>
            </value>
            <value>
                <fullName>CPS Alum</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>NUSL Alum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>