unpackaged/main/default/objects/Contact/fields/NU_ADV_Current_UGD_Parent__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_Current_UGD_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this a parent of a full-time undergraduate day student?</inlineHelpText>
    <label>Current UGD Parent</label>
    <type>Checkbox</type>
</CustomField>