unpackaged/main/default/objects/Contact/fields/NU_ADV_Home_Campus__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_Home_Campus__c</fullName>
    <label>Home Campus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Portland</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>San Jose</fullName>
            </value>
            <value>
                <fullName>Seattle</fullName>
            </value>
            <value>
                <fullName>Toronto</fullName>
            </value>
            <value>
                <fullName>Vancouver</fullName>
            </value>
            <value>
                <fullName>Arlington</fullName>
            </value>
            <value>
                <fullName>Oakland</fullName>
            </value>
            <value>
                <fullName>Silicon Valley</fullName>
            </value>
            <value>
                <fullName>Miami</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>