unpackaged/main/default/objects/Contact/fields/NU_ADV_Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_Primary_Phone__c</fullName>
    <description>Value of the corresponding Primary Phone Type</description>
    <formula>If (
ISBLANK(TEXT(ucinn_ascendv2__Preferred_Phone_Type__c)),
'',
CASE (
ucinn_ascendv2__Preferred_Phone_Type__c,
'Mobile', MobilePhone,
'Home', HomePhone,
'Assistant', AssistantPhone,
'Other', OtherPhone,
''
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Phone</label>
    <type>Text</type>
</CustomField>