unpackaged/main/default/objects/Contact/fields/NU_ADV_Service_Indicators__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_Service_Indicators__c</fullName>
    <description>Rollup of constituent's active service indicators. Populated by the flows "Service Indicator Rollup to Constituent" and "Service Indicator Deletion." Picklist values should match records from the Service Indicator Value object exactly; when a Service Indicator Value is created or removed, this picklist MUST be updated.</description>
    <label>Service Indicator(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bypass from Athletics</fullName>
            </value>
            <value>
                <fullName>Bypass from Hillel</fullName>
            </value>
            <value>
                <fullName>Do Not Contact by WhatsApp</fullName>
            </value>
            <value>
                <fullName>Do Not Invite to Alumni Events</fullName>
            </value>
            <value>
                <fullName>Do Not Invite to College Specific Events</fullName>
            </value>
            <value>
                <fullName>Do not Invite to Events</fullName>
            </value>
            <value>
                <fullName>Do not Invite to Special Events</fullName>
            </value>
            <value>
                <fullName>Do not mail Bouve Vital Signs</fullName>
            </value>
            <value>
                <fullName>Do Not Send Alum Magazine</fullName>
            </value>
            <value>
                <fullName>Do Not Send Parent Communications</fullName>
            </value>
            <value>
                <fullName>Do Not Send Parents Newsletter</fullName>
            </value>
            <value>
                <fullName>Do Not Send Reunion Invite</fullName>
            </value>
            <value>
                <fullName>Duplicate - Record Flag</fullName>
            </value>
            <value>
                <fullName>Email Hard Bounce</fullName>
            </value>
            <value>
                <fullName>Email Opt Out</fullName>
            </value>
            <value>
                <fullName>Global Connection Opt Out</fullName>
            </value>
            <value>
                <fullName>Never Contact</fullName>
            </value>
            <value>
                <fullName>Never Contact by Phone</fullName>
            </value>
            <value>
                <fullName>Never Solicit</fullName>
            </value>
            <value>
                <fullName>Never Solicit by Phone</fullName>
            </value>
            <value>
                <fullName>NF - No Second Asks</fullName>
            </value>
            <value>
                <fullName>NF - Solicit Infrequently</fullName>
            </value>
            <value>
                <fullName>NoAffinity VendorMailings</fullName>
            </value>
            <value>
                <fullName>No Alumni Directory</fullName>
            </value>
            <value>
                <fullName>No Annual Giving Appeals</fullName>
            </value>
            <value>
                <fullName>No Annual Ldrship Gift Circle</fullName>
            </value>
            <value>
                <fullName>No Broadcast Text Messages</fullName>
            </value>
            <value>
                <fullName>No Catalyst Magazine</fullName>
            </value>
            <value>
                <fullName>No Donor List</fullName>
            </value>
            <value>
                <fullName>No Email Solicitations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>