unpackaged/main/default/objects/Contact/fields/NU_ADV_Sync_to_Marketing_Cloud__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_Sync_to_Marketing_Cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync to Marketing Cloud</label>
    <type>Checkbox</type>
</CustomField>