unpackaged/main/default/objects/Contact/fields/Slate_ID__c.field-meta.xml
<CustomField>
    <fullName>Slate_ID__c</fullName>
    <description>This is id of a parent that was assigned through the Slate application process.
Source = PROD_LZ.SRC_SLATE.APPLICANT_PARENTS_DATA</description>
    <externalId>true</externalId>
    <label>Slate ID</label>
    <length>11</length>
    <type>Text</type>
</CustomField>