unpackaged/main/default/objects/Contact/fields/Student_Level__c.field-meta.xml
<CustomField>
    <fullName>Student_Level__c</fullName>
    <label>Student Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPS - Graduate</fullName>
            </value>
            <value>
                <fullName>CPS - Undergraduate Semester</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
            <value>
                <fullName>Undergraduate_Special</fullName>
                <label>Undergrad Special</label>
            </value>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>