unpackaged/main/default/objects/Contact/fields/ucinn_ascendv2__Email_Body__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Email_Body__c</fullName>
    <label>Email Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>