unpackaged/main/default/objects/Contact/fields/ucinn_ascendv2__Preferred_Email_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Preferred_Email_Type__c</fullName>
    <label>Preferred Email Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Email_Type</valueSetName>
    </valueSet>
</CustomField>