unpackaged/main/default/objects/Contact/fields/ucinn_ascendv2__Salutation_Preference__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Salutation_Preference__c</fullName>
    <label>Salutation Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Modern Name</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>