unpackaged/main/default/objects/Contact/recordTypes/NU_ADV_Non_Constituent.recordType-meta.xml
<RecordType>
    <fullName>NU_ADV_Non_Constituent</fullName>
    <active>true</active>
    <description>For non constituent persons.</description>
    <label>Non-Constituent</label>
</RecordType>