unpackaged/main/default/objects/Contact/recordTypes/ucinn_ascendv2__Edit_Contact.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Edit_Contact</fullName>
    <active>true</active>
    <description>The record type that is used for editing the Constituent.</description>
    <label>Constituent Details</label>
</RecordType>