unpackaged/main/default/objects/Contact/recordTypes/ucinn_ascendv2__New_Contact.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__New_Contact</fullName>
    <active>true</active>
    <description>Only used when creating a new constituent contact.</description>
    <label>Constituent</label>
</RecordType>